#   PROCESS THAT IS TIME SENSITIVE, UNMONITORED, OR
#   PERSISTENCE CRITICAL. DO NOT USE THIS SOFTWARE WITHOUT
#   ANOTHER METHOD FOR RUNNING THE PROCESS YOU WISH TO
#   AUTOMATE WITH Net::FullAuto. DO NOT USE IN/FOR A PROCESS
#   WHERE FAILURE OF "ANY KIND" IS UNACCEPTABLE.
#
################################################################

2010-07-13  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.13 released.

        * Modified Build to compile C Wrapper fullauto(.exe)
          to fullauto.pl to use with setuid 


2009-07-11  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.12 released.

        * Repaired ability to run multi-line commands

        * Added code to remove PROMPT_COMMAND in remote environment

2007-09-23  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.11 released.

        * Repaired Pod Documentation

2007-09-20  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.10 released.

        * Repaired Pod Documentation

        * Added Setup Checklist to Pod

2007-09-20  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.09 released.

        * Repaired Pod Documentation

2007-09-19  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.08 released.

        * Cleaned out usr_code.pm file

2007-09-19  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.07 released.

        * Repaired Pod Documentation

        * Cleaned out fa_hosts.pm file

2007-09-19  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.06 released.

        * Added more Pod Documentation to FullAuto.pm describing
          the required contents of the usr_code.pm file.

2007-09-17  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.05 released.

        * Added more Pod Documentation to FullAuto.pm describing
          the required contents of the fa_hosts.pm file. 
