@@ -33,7 +33,7 @@ package Net::FullAuto;
 #
 ################################################################
 
-our $VERSION='0.13';
+our $VERSION='0.14';
 use 5.002;
 
 BEGIN {
